# feature_extractor

./: .gitignore  CMakeLists.txt  feature_extractor  feature_extractor.cpp  feature_extractor.hpp  glcm.cpp  glcm_feature_extractor.cpp  glcm_feature_extractor.hpp  histo_util.cpp  histo_util.hpp  lbp.cpp  lbp_feature_extractor.cpp  lbp_feature_extractor.hpp  main.cpp
util/: rcsv2arff.rb  rfe.rb
